--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "codepage": "^1.15.0",
     "crc-32": "^1.2.2",
     "frac": "^1.1.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "ssf": "^0.11.2",
